# TNC-File-Stream-Bot

./: .replit  pyproject.toml  requirements.txt
Adarsh/: Web Streamer.session-journal  vars.py
Adarsh/bot/plugins/: admin.py  extra.py  start_help.py  stream.py
Adarsh/server/: stream_routes.py
Adarsh/template/: req.html
Adarsh/utils/: database.py  render_template.py
