[tool.poetry]
name = "repl_nix_Baskar-File-Stream-Bot"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.2"
motor = "^3.1.1"
psutil = "^5.9.4"
Pyrogram = "^2.0.99"
pyromod = "^2.0.0"
python-dotenv = "^0.21.1"
aiofiles = "^23.1.0"
aiohttp = "^3.8.4"
TgCrypto = "^1.2.5"
shortzy = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
